@@ -1,7 +1,7 @@
 package se.sundsvall.notifier.users.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,10 +16,12 @@ import se.sundsvall.notifier.users.service.mapper.UserMapper;
 
 import static java.lang.String.format;
 import static org.springframework.http.HttpStatus.CONFLICT;
+import static org.springframework.http.HttpStatus.FORBIDDEN;
 import static org.springframework.http.HttpStatus.NOT_FOUND;
 
 @Service
 @Transactional
+@PreAuthorize("hasRole('ADMIN')")
 public class UserService {
 
 	private final UserRepository userRepository;
@@ -28,7 +30,8 @@ public class UserService {
 
 	private final PasswordEncoder passwordEncoder;
 
-	private final String USER_NOT_FOUND = "user %s was not found";
+	private static final String USER_NOT_FOUND = "user %s was not found";
+	private static final String USER_ALREADY_EXISTS = "user %s already exists";
 
 	public UserService(UserRepository userRepository, UserMapper userMapper, PasswordEncoder passwordEncoder) {
 		this.userRepository = userRepository;
@@ -43,11 +46,10 @@ public class UserService {
 			final var userEntity = userRepository.save(userMapper.toUserEntity(userRequest, hashedPassword));
 			return userMapper.toUserResponse(userEntity);
 		}
-		String USER_ALREADY_EXISTING = "user already exists";
-		throw Problem.valueOf(CONFLICT, format(USER_ALREADY_EXISTING));
+
+		throw Problem.valueOf(CONFLICT, format(USER_ALREADY_EXISTS, userRequest.getEmail()));
 	}
 
-	// READ
 	public UserResponse getUserByEmail(String email) {
 		return userRepository.findByEmail(email).map(userMapper::toUserResponse)
 			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, format(USER_NOT_FOUND, email)));
@@ -58,7 +60,6 @@ public class UserService {
 			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, format(USER_NOT_FOUND, id)));
 	}
 
-	// UPDATE
 	public void updateUserPasswordById(Long id, String password) {
 		var userEntity = userRepository.findById(id)
 			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, format(USER_NOT_FOUND, id)));
@@ -87,12 +88,11 @@ public class UserService {
 		return userMapper.toUserResponse(userEntity);
 	}
 
-	// DELETE
 	public void deleteUserByEmail(String email) {
 		var userEntity = userRepository.findByEmail(email)
 			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, format(USER_NOT_FOUND, email)));
 		if (userEntity.getRole() == Role.ADMIN) {
-			throw Problem.valueOf(org.springframework.http.HttpStatus.FORBIDDEN, "admin users cannot be deleted");
+			throw Problem.valueOf(FORBIDDEN, "admin users cannot be deleted");
 		}
 		userRepository.deleteByEmail(email);
 	}
@@ -101,7 +101,7 @@ public class UserService {
 		var userEntity = userRepository.findById(id)
 			.orElseThrow(() -> Problem.valueOf(NOT_FOUND, format(USER_NOT_FOUND, id)));
 		if (userEntity.getRole() == Role.ADMIN) {
-			throw Problem.valueOf(org.springframework.http.HttpStatus.FORBIDDEN, "admin users cannot be deleted");
+			throw Problem.valueOf(FORBIDDEN, "admin users cannot be deleted");
 		}
 		userRepository.deleteById(id);
 	}
@@ -109,6 +109,6 @@ public class UserService {
 	public List<UserResponse> getAllUsers() {
 		return userRepository.findAllByRole(Role.USER).stream()
 			.map(userMapper::toUserResponse)
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
